--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <td><img class="shape" src="img/circle.png"><img class="shape" src="img/cross.png"></td>
+            <td><img class="shape" src="img/circle.png"><img class="shape" src="img/cross.png"></td>
+            <td><img class="shape" src="img/circle.png"><img class="shape" src="img/cross.png"></td>
+        </tr>
+        <tr>
+            <td><img class="shape" src="img/circle.png"><img class="shape" src="img/cross.png"></td>
+            <td><img class="shape" src="img/circle.png"><img class="shape" src="img/cross.png"></td>
+            <td><img class="shape" src="img/circle.png"><img class="shape" src="img/cross.png"></td>
+        </tr>
+        <tr>
+            <td><img class="shape" src="img/circle.png"><img class="shape" src="img/cross.png"></td>
+            <td><img class="shape" src="img/circle.png"><img class="shape" src="img/cross.png"></td>
+            <td><img class="shape" src="img/circle.png"><img class="shape" src="img/cross.png"></td>
+        </tr>
+    </table>
 </body>
 </html>
