added current player

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+    <div class="player-panel">
+        <div class="player-one" id="player-1"><img src="img/circle.png">Player 1</div>
+        <div class="player-two player-inactive" id="player-2"><img src="img/cross.png">Player 2</div>
+    </div>
     <table>
         <tr>
             <td onclick="fillShape(0)">
