--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <div class="player-one" id="player-1"><img src="img/circle.png">Player 1</div>
         <div class="player-two player-inactive" id="player-2"><img src="img/cross.png">Player 2</div>
     </div>
+
+    <div id="line-0" class="horizontal-line" style="top: 722px"></div>
+    <div id="line-1" class="horizontal-line" style="top: 582px"></div>
+    <div id="line-2" class="horizontal-line" style="top: 442px"></div>
+    <div id="line-3" class="horizontal-line make-vertical" style="top: 582px; left: 122px"></div>
+    <div id="line-4" class="horizontal-line make-vertical" style="top: 582px"></div>
+    <div id="line-5" class="horizontal-line make-vertical" style="top: 582px; left: 402px"></div>
+    <div id="line-6" class="horizontal-line" style="top: 582px; transform: rotate(45deg) scaleX(0.0); width: 400px;"></div>
+    <div id="line-7" class="horizontal-line" style="top: 582px; transform: rotate(-45deg) scaleX(0.0); width: 400px;"></div>
+
     <table>
         <tr>
             <td onclick="fillShape(0)">
